Añado la primera versión de la traducción

--- a/web/index.html
+++ b/web/index.html
@@ -33,8 +33,8 @@
 				</div>
 				<div class="col s6 texto">
 					<h1 class="text_h center header cd-headline letters type">
-						<span class="fijo">Oposiciones de </span> 
-						<span class="cd-words-wrapper waiting">
+						<span class="fijo lang-typewriter-header">Oposiciones de </span> 
+						<span class="cd-words-wrapper waiting lang-typewriter-values">
 							<b class="is-visible">MIR</b>
 							<b>Auxiliar de Bibliotecas</b>
 							<b>Policía</b>
@@ -70,29 +70,29 @@
 			<!--   Icon Section   -->
 		<div class="row">
 					<div  class="col s12">
-						<h2 class="center header text_h2"> Octopus es una nueva app para realizar <span class="span_h2"> test de oposiciones </span>desde tu móvil.</h2>
+						<h2 class="center header text_h2"> <span class="lang-intro-header">Octopus es una nueva app para realizar</span> <span class="span_h2 lang-intro-text"> test de oposiciones </span></span> </h2>
 					</div>
 
 						<div  class="col s12 m4 l4">
 							<div class="center promo promo-example">
 								<i class="mdx">tag_faces</i>
-								<h5 class="promo-caption">Descarga gratuita</h5>
-								<p class="light center">Para teléfonos Android con versión 4 o superior y iPhone con versión 7 o superior.</p>
+								<h5 class="promo-caption lang-box1-header">Descarga gratuita</h5>
+								<p class="light center lang-box1-text">Para teléfonos Android con versión 4 o superior y iPhone con versión 7 o superior.</p>
 							</div>
 						</div>
 
 						<div  class="col s12 m4 l4">
 							<div class="center promo promo-example">
 								<i class="mdx">view_module</i>
-								<h5 class="promo-caption">Centenares de test al alcance de tu mano</h5>
-								<p class="light center">Tenemos muchos de los cuestionarios que han salido en oposiciones, e iremos incorporando todos los que salgan. Están organizados para que encuentres rápidamente lo que buscas, y la mayoría (+75%) son gratuitos.</p>
+								<h5 class="promo-caption lang-box2-header">Centenares de test al alcance de tu mano</h5>
+								<p class="light center lang-box2-text">Tenemos muchos de los cuestionarios que han salido en oposiciones, e iremos incorporando todos los que salgan. Están organizados para que encuentres rápidamente lo que buscas, y la mayoría (+75%) son gratuitos.</p>
 							</div>
 						</div>
 						<div class="col s12 m4 l4">
 							<div class="center promo promo-example">
 								<i class="mdx">search</i>
-								<h5 class="promo-caption">Encuentra lo que te interesa</h5>
-								<p class="light center">Puedes explorar las características, buscar por año y profesión, y hasta descargar una muestra gratuita por si aún tienes dudas.
+								<h5 class="promo-caption lang-box3-header">Encuentra lo que te interesa</h5>
+								<p class="light center lang-box3-text">Puedes explorar las características, buscar por año y profesión, y hasta descargar una muestra gratuita por si aún tienes dudas.
 							</div>
 						</div>
 
@@ -102,22 +102,22 @@
 				<div class="col s12 m4 l4">
 					<div class="center promo promo-example">
 						<i class="mdx">touch_app</i>
-					 <h5 class="promo-caption">Una interfaz específicamente diseñada para que te concentres en tu test</h5>
-						<p class="light center">Con la pregunta y las respuestas claramente delimitadas, la posibilidad de ver las imágenes adjuntas a pantalla completa, un rápido acceso al mapa del cuestionario o la posibilidad de marcar aquellas cuestiones que desees repasar.</p>
+					 <h5 class="promo-caption lang-box4-header">Una interfaz específicamente diseñada para que te concentres en tu test</h5>
+						<p class="light center lang-box4-text">Con la pregunta y las respuestas claramente delimitadas, la posibilidad de ver las imágenes adjuntas a pantalla completa, un rápido acceso al mapa del cuestionario o la posibilidad de marcar aquellas cuestiones que desees repasar.</p>
 					</div>
 				</div>
 				<div  class="col s12 m4 l4">
 					<div class="center promo promo-example">
 						<i class="mdx">videogame_asset</i>
-						<h5 class="promo-caption">El aprendizaje es un juego</h5>
-						<p class="light center">Con el objetivo de estimularte en la consecución de tus objetivos hemos tomado prestadas algunas características de los videojuegos: medallero, ranking...</p>
+						<h5 class="promo-caption lang-box5-header">El aprendizaje es un juego</h5>
+						<p class="light center lang-box5-text">Con el objetivo de estimularte en la consecución de tus objetivos hemos tomado prestadas algunas características de los videojuegos: medallero, ranking...</p>
 					</div>
 				</div>
 				<div  class="col s12 m4 l4">
 					<div class="center promo promo-example">
 						<i class="mdx">recent_actors</i>
-						<h5 class="promo-caption">Múltiples profesiones</h5>
-						<p class="light center">Hemos hecho un importante esfuerzo por incorporar un buen número de profesiones, e iremos incorporando otras nuevas de manera continua.</p>
+						<h5 class="promo-caption lang-box6-header">Múltiples profesiones</h5>
+						<p class="light center lang-box6-text">Hemos hecho un importante esfuerzo por incorporar un buen número de profesiones, e iremos incorporando otras nuevas de manera continua.</p>
 					</div>
 				</div>
 
@@ -127,7 +127,7 @@
 
 <div class="section scrollspy" id="work">
  		<div class="container">
-				<h2 class="header text_b"> Diseño </h2>
+				<h2 class="header text_b lang-section-header"> Diseño </h2>
 				<div class="row">
 					
 					<div class="col s6 peques">
@@ -146,8 +146,8 @@
 		<div class="container">  
  			<div class="row">		
 				<div class="col l12 s12 row padding0">
-					<h5 class="white-text col s12 padding5">Sobre Octopus</h5>
-					<p class="grey-text text-lighten-4 col s6 padding5">
+					<h5 class="white-text col s12 padding5 lang-about-header">Sobre Octopus</h5>
+					<p class="grey-text text-lighten-4 col s6 padding5 lang-about-text">
 						Octopus es una nueva plataforma para realizar test de oposiciones cómodamente desde tu teléfono Android o iPhone.</p>
 
 					<div class="col s6 descarga">
@@ -183,7 +183,7 @@
 		
 		<div class="footer-copyright">
 			<div class="container">
-			Ideado y creado por <a class="white-text" href="http://www.octopusapp.es">Carrón Sisters</a> @ 2015
+			<span class="lang-author-header"> Ideado y creado por</span> <a class="white-text" href="http://www.octopusapp.es">Carrón Sisters</a> @ 2015
 			</div>
 		</div>
 		
