--- a/web/index.html
+++ b/web/index.html
@@ -165,8 +165,8 @@
 					<h5 class="white-text">Web</h5>
 					<ul>
 						<li><a title="Toda la información sobre la app" class="white-text" href="./index.html">app</a></li>
-						<li><a title="Preguntas más frecuentes" class="white-text" href="./faq.html">p+f</a></li>
-						<li><a title="Eventos, Publicaciones y Roadmap" class="white-text" href="./tl.html">eventos</a></li>
+						<li><a title="Preguntas más frecuentes" class="white-text lang-lnk-faq" href="./faq.html">p+f</a></li>
+						<li><a title="Eventos, Publicaciones y Roadmap" class="white-text lang-lnk-roadmap" href="./tl.html">eventos</a></li>
 						
 					</ul>
 				</div>
