Añado links idioma

--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,11 @@
 <div class="section no-pad-bot" id="index-banner">
 		<div class="container">
 			<div class="row">
+				<span class="col s12 changelang">
+					<div class="es" onclick="changelang('es')"></div>
+					<div class="en" onclick="changelang('en')"></div>
+				</span>
+				
 				<div class="col s6 right">
 					<img id="lnd" src="">			
 				</div>
