ajustes botones de descarga

--- a/web/index.html
+++ b/web/index.html
@@ -59,10 +59,10 @@
 					</h1>
 				</div>
 				<div class="col s6 descarga">
-					<a class="col s12 l6 shop android" href="https://play.google.com/store/apps/details?id=es.octopusapp.clo">
+					<a class="col s12 push-l2 l4 shop android" href="https://play.google.com/store/apps/details?id=es.octopusapp.clo">
 						<img src="img/shop-android.png">
 					</a>
-					<a class="col s12 l6 shop ios" href="https://itunes.apple.com/es/app/octopus-test-oposiciones-y/id1027449575?l=es&ls=1&mt">
+					<a class="col s12 push-l2 l4 shop ios" href="https://itunes.apple.com/es/app/octopus-test-oposiciones-y/id1027449575?l=es&ls=1&mt">
 						<img src="img/shop-ios.png">
 					</a>
 				</div>
